test/parsetest/valid/AlternatingOperators.java
class AlternatingOperators {
    public static void main(String [] args) {
        !-!-!-!-!-!-!-!-!-!-!-!foo;
        foo[1].bar[2].baz[3];
    }
}
