test/parsetest/invalid/NotString.java
class NotString {
    public static void main(DefinitelyNoString [] args) {
        ;;;;
    }
}
